--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: crystal
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y ruby default-jdk haskell-platform python3
+  - curl -s "https://get.sdkman.io" | bash
+  - source "$HOME/.sdkman/bin/sdkman-init.sh"
+  - sdk install kotlin
 
 install: make clean build
 
