--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: crystal
 
 before_install:
+  - sudo rm -vf /etc/apt/sources.list.d/*riak*
   - sudo apt-get -qq update
-  - sudo apt-get install -y ruby default-jdk haskell-platform python3
+  - sudo apt-get install -y default-jdk haskell-platform
 
 install: make clean build
 
