--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: crystal
 before_install:
   - sudo rm -vf /etc/apt/sources.list.d/*riak*
   - sudo apt-get -qq update
-  - sudo apt-get install -y default-jdk haskell-platform
+  - sudo apt-get install -y default-jdk haskell-platform mono-mcs
 
 install: make clean build
 
