--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: crystal
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y default-jdk haskell-platform mono-mcs
+  - eval "$(gimme 1.9)"
 
 install: make clean build
 
